Added Version Change Commit Step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,10 @@ jobs:
         working-directory: ./client
         run: npm version patch
         
+      - name: Commit Version Change
+        working-directory: ./client
+        run: git commit ./package.json ./package-lock.json -m "Automated Version Update"
+        
       - name: Push new version
         run: git push
         
@@ -46,7 +50,7 @@ jobs:
         
       - name: Build Docker Image
         working-directory: ./client
-        run: docker build . --file Dockerfile --tag ${{secrets.DOCKERHUB_USERNAME}}/portfolio-website:${{steps.version.outputs.tag}} # Version is a previously set within the file (id: version)
+        run: docker build . --file Dockerfile --tag ${{secrets.DOCKERHUB_USERNAME}}/portfolio-website:${{steps.version.output.tag}} # Version is a previously set within the file (id: version)
         
       - name: Push to DockerHub
         working-directory: ./client
