--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,9 @@ jobs:
         working-directory: ./client
         run: npm ci # This is npm clean-install and will install all in package.json
         
-      - name: Create new branch
-        working-directory: ./client
-        run: git checkout -b versionUpgrade
+      #- name: Create new branch
+      #  working-directory: ./client
+      #  run: git checkout -b versionUpgrade
         
       - name: Build
         working-directory: ./client
@@ -39,12 +39,12 @@ jobs:
         working-directory: ./client
         run: npm version patch
         
-      - name: Commit Version Change
-        working-directory: ./client
-        run: git commit ./package.json ./package-lock.json -m "Automated Version Update"
+      #- name: Commit Version Change
+      #  working-directory: ./client
+      #  run: git commit ./package.json ./package-lock.json -m "Automated Version Update"
                 
-      - name: Push new version
-        run: git push --set-upstream origin versionUpgrade
+      #- name: Push new version
+      #  run: git push --set-upstream origin versionUpgrade
         
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
