--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,10 +22,6 @@ jobs:
         working-directory: ./client
         run: npm ci # This is npm clean-install and will install all in package.json
         
-      #- name: Create new branch
-      #  working-directory: ./client
-      #  run: git checkout -b versionUpgrade
-        
       - name: Build
         working-directory: ./client
         run: npm run build
@@ -39,19 +35,13 @@ jobs:
         working-directory: ./client
         run: npm version patch
         
-      #- name: Commit Version Change
-      #  working-directory: ./client
-      #  run: git commit ./package.json ./package-lock.json -m "Automated Version Update"
-                
-      #- name: Push new version
-      #  run: git push --set-upstream origin versionUpgrade
-        
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
           branch: "versionUpgrade"
           base: main
           delete-branch: true
+          title: Version Upgrade (REMINDER TO DELETE BRANCH)
           
         
         # The previous section was to build the react app, apply versions and push back to github
