--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,9 +54,13 @@ jobs:
         
       - name: Build Docker Image
         working-directory: ./client
-        run: docker build . --file Dockerfile --tag ${{secrets.DOCKERHUB_USERNAME}}/portfolio-website:${{steps.version.outputs.tag}} # Version is a previously set within the file (id: version)
+        run: docker build . --file Dockerfile --tag ${{secrets.DOCKERHUB_USERNAME}}/portfolio-website:latest --tag ${{secrets.DOCKERHUB_USERNAME}}/portfolio-website:${{steps.version.outputs.tag}} # Version is a previously set within the file (id: version)
         
-      - name: Push to DockerHub
+      - name: Push Tagged Version to DockerHub
         working-directory: ./client
         run: docker push ${{secrets.DOCKERHUB_USERNAME}}/portfolio-website:${{steps.version.outputs.tag}}
+        
+      - name: Push Latest Version to DockerHub
+        working-directory: ./client
+        run: docker push ${{secrets.DOCKERHUB_USERNAME}}/portfolio-website:latest
         
