Created users path for checking users

--- a/signInServer/.env
+++ b/signInServer/.env
@@ -1,2 +1,5 @@
 PORT=3001
-MONGO_URI=192.168.0.51:27017
+MONGO_URI=mongodb://192.168.0.51:27017
+DB_NAME=portfolioLandingPage
+DB_USER=nodeUser
+DB_PASS=nodeJSUserAdmin987
