--- a/signInServer/package.json
+++ b/signInServer/package.json
@@ -4,8 +4,10 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "createerror": "^1.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "nodemon": "^2.0.20"
