--- a/signInServer/package.json
+++ b/signInServer/package.json
@@ -10,6 +10,7 @@
     "http-errors": "^2.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
+    "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20"
   }
 }
