--- a/signInServer/package.json
+++ b/signInServer/package.json
@@ -4,13 +4,14 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.2.6",
     "createerror": "^1.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
-    "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20"
   }
 }
