--- a/signInServer/package.json
+++ b/signInServer/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "axios": "^1.2.6",
+    "connect-mongo": "^4.6.0",
     "createerror": "^1.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
