--- a/signInServer/package.json
+++ b/signInServer/package.json
@@ -14,6 +14,8 @@
     "http-errors": "^2.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
