--- a/.github/workflows/build-SSO.yml
+++ b/.github/workflows/build-SSO.yml
@@ -17,6 +17,10 @@ jobs:
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
+
+      - name: Dependencies
+        working-directory: ./signInServer
+        run: npm ci # This is npm clean-install and will install all in package.json
         
       - name: Save version # Allows to save the version of node modules
         working-directory: ./signInServer
