--- a/client/.gitignore
+++ b/client/.gitignore
@@ -11,12 +11,11 @@
 # production
 /build
 
+# environments
+.env
+
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
