--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,5 +8,5 @@
       "sourceMap": true,
       "outDir": "dist"
     },
-    "lib": ["es2015"]
+    "lib": ["es2015", "es5", "es6", "dom", "dom.iterable"]
   }
