--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "axios": "^1.6.2",
     "jest-watch-typeahead": "^0.6.5",
     "react-test-renderer": "^18.2.0",
     "typescript": "^5.3.2"
