--- a/.github/workflows/test-build-SSO.yml
+++ b/.github/workflows/test-build-SSO.yml
@@ -1,15 +1,12 @@
-name: Build Landing Page
+name: Test Build SSO
 
 on:
   workflow_dispatch: # Manually be able to run it
   
-env:
-  REACT_APP_SSO_API_BASE_URI: ${{ secrets.REACT_APP_SSO_API_BASE_URI }}
-
 jobs:
   Docker:
     runs-on: ubuntu-latest # Linux is the cheapest
-    environment: PROD
+    environment: TEST
     outputs:
       tag: ${{ steps.version.outputs.tag }}
     steps:
@@ -21,28 +18,24 @@ jobs:
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
-        
+
       - name: Dependencies
-        working-directory: ./client
+        working-directory: ./signInServer
         run: npm ci # This is npm clean-install and will install all in package.json
         
-      - name: Build
-        working-directory: ./client
-        run: npm run build
-        
       - name: Save version # Allows to save the version of node modules
-        working-directory: ./client
+        working-directory: ./signInServer
         id: version
         run: echo "tag=$(node -p -e "require('./package.json').version")" >> $GITHUB_OUTPUT
         
       - name: Increase version
-        working-directory: ./client
+        working-directory: ./signInServer
         run: npm version patch
         
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
-          branch: "versionUpgrade"
+          branch: "versionUpgradeSSO"
           base: main
           delete-branch: true
           title: Version Upgrade (REMINDER TO DELETE BRANCH)
@@ -53,18 +46,18 @@ jobs:
         # The next few steps are to create a docker image so a server can run this in a docker container and upgrade images easily
         
       - name: Login to DockerHub
-        working-directory: ./client
+        working-directory: ./signInServer
         run: echo ${{secrets.DOCKERHUB_PASSWORD}} | docker login -u ${{secrets.DOCKERHUB_USERNAME}} --password-stdin # The secrets are a Github actions variable so public code doesn't include passwords and usernames
         
       - name: Build Docker Image
-        working-directory: ./client
-        run: docker build . --file Dockerfile --tag ${{secrets.DOCKERHUB_USERNAME}}/portfolio-website:latest --tag ${{secrets.DOCKERHUB_USERNAME}}/portfolio-website:${{steps.version.outputs.tag}} # Version is a previously set within the file (id: version)
+        working-directory: ./signInServer
+        run: docker build . --file Dockerfile --tag ${{secrets.DOCKERHUB_USERNAME}}/portfolio-single-sign-on-test:latest --tag ${{secrets.DOCKERHUB_USERNAME}}/portfolio-single-sign-on-test:${{steps.version.outputs.tag}} # Version is a previously set within the file (id: version)
         
       - name: Push Tagged Version to DockerHub
-        working-directory: ./client
-        run: docker push ${{secrets.DOCKERHUB_USERNAME}}/portfolio-website:${{steps.version.outputs.tag}}
+        working-directory: ./signInServer
+        run: docker push ${{secrets.DOCKERHUB_USERNAME}}/portfolio-single-sign-on-test:${{steps.version.outputs.tag}}
         
       - name: Push Latest Version to DockerHub
-        working-directory: ./client
-        run: docker push ${{secrets.DOCKERHUB_USERNAME}}/portfolio-website:latest
+        working-directory: ./signInServer
+        run: docker push ${{secrets.DOCKERHUB_USERNAME}}/portfolio-single-sign-on-test:latest
         
