--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "axios": "^1.6.2",
     "jest-watch-typeahead": "^0.6.5",
     "react-test-renderer": "^18.2.0",
-    "typescript": "^5.3.2"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^4.9.5"
   }
 }
