--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -8,7 +8,7 @@
         "type": "image/svg"
       }
     ],
-    "start_url": ".",
+    "start_url": "/",
     "display": "standalone",
     "theme_color": "#020617",
     "background_color": "#020617"
